# Libsibow

./: CMakeLists.txt  README.md  dox.in
include/: collection.h  export.h  item.h  matches.h
src/: collection.cpp  item.cpp  matches.cpp
tests/: CMakeLists.txt  testcollection.cpp  traincollection.cpp
